[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/monogram_extended.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Title.gd" type="Script" id=3]
[ext_resource path="res://src/ui/UILayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/SettingsScreen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 160
font_data = ExtResource( 2 )

[node name="Title" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = 1020.0
margin_bottom = 285.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DavidSnopekLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 2200.0
margin_bottom = 51.0
text = "David Snopek's"

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 55.0
margin_right = 2200.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 1 )
text = "Retro Tank Party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -302.0
margin_bottom = -102.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalButton" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 260.0
margin_right = 480.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 0 )
text = "Practice"

[node name="OnlineButton" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 530.0
margin_right = 750.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 0 )
text = "Battle"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 800.0
margin_right = 1020.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 0 )
text = "Settings"

[node name="UILayer" parent="." instance=ExtResource( 4 )]

[node name="SettingsScreen" parent="UILayer/Screens" index="0" instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="back_button" from="UILayer" to="." method="_on_UILayer_back_button"]

[editable path="UILayer"]
